# scientific-project

MARL/: run_maacktr.py  (+2 more)
_ref_sandra/SanDRA-develop/: .gitignore  README.md  commonroad_run.py  highwayenv_run.py  pyproject.toml  scenario.xml
_ref_sandra/SanDRA-develop/config/: reactive_planner.yaml
_ref_sandra/SanDRA-develop/docs/: index.html
_ref_sandra/SanDRA-develop/experiments/: README.md  highwayenv_analysis_fail-safe.py  highwayenv_analysis_ratio.py  highwayenv_analysis_rule_monitoring.py  highwayenv_analysis_xml.py  highwayenv_analysis_xml_rule.py  mona_analysis.py  mona_analysis_add_label_columns.py
_ref_sandra/SanDRA-develop/experiments/highwayenv_scenarios/: ZAM_Sandra-5838_1_T-1001-DiLu.xml  ZAM_Sandra-5838_1_T-1001-set-no-rule.xml  ZAM_Sandra-5838_1_T-1001-set-with-rule.xml  robustness_evaluation.py
_ref_sandra/SanDRA-develop/sandra/: actions.py  config.py  decider.py  describer.py  labeler.py  llm.py  rules.py  verifier.py
_ref_sandra/SanDRA-develop/sandra/commonroad/: describer.py  plan.py  reach.py
_ref_sandra/SanDRA-develop/scenarios/: DEU_AachenAseag-1_80_T-99.xml  DEU_AachenBendplatz-1_80_T-19.xml  DEU_AachenFrankenburg-1_2120_T-39.xml  DEU_AachenHeckstrasse-1_30520_T-539.xml  DEU_Goeppingen-37_1_T-4.xml  DEU_Goeppingen-37_1_T-5.xml  DEU_LocationALower-11_10_T-1.xml  DEU_LocationALower-36_263_T-15.xml  DEU_MONAEast-2_4316_T-4341.xml  DEU_MONAWest-2_200141182_T-148.xml
_ref_sandra/SanDRA-develop/test/: test_continuous_control.py  test_highenv_decider.py  test_labeler.py  test_prompting.py  test_road_network.py  test_verifier.py
(+133 files in other folders)
